--- a/public/config.json
+++ b/public/config.json
@@ -3,6 +3,7 @@
     "referral_storage": "0x6f4ECcB5d1441854ac130D03Cd83895ad5EB8d04",
     "meta": "0xddc2Fbc6761eabf131E51101Dd3b43A295e121F1",
     "router": "0x76c52E83d7dcCc70107a66BAd44D042D22D06be7",
+    "multicall":"0xca11bde05977b3631167028862be2a173976ca11",
     "tokens": {
       "USDC": {
         "address": "0x658e6B62e7ab1d2B29a08F85f8442edEed562b48",
@@ -106,6 +107,7 @@
     "referral_storage": "0xFea57B9548cd72D8705e4BB0fa83AA35966D9c29",
     "meta": "0xd43eBDeA4efEDFa14024F9894169fad8896728A4",
     "router": "0x0e0A1241C9cE6649d5D30134a194BA3E24130305",
+    "multicall":"0x842eC2c7D803033Edf55E478F461FC547Bc54EB2",
     "tokens": {
       "USDC": {
         "address": "0xFF970A61A04b1cA14834A43f5dE4533eBDDB5CC8",
@@ -206,23 +208,24 @@
     ]
   },
   "80001": {
-    "referral_storage": "0xFea57B9548cd72D8705e4BB0fa83AA35966D9c29",
-    "meta": "0xd43eBDeA4efEDFa14024F9894169fad8896728A4",
-    "router": "0x0e0A1241C9cE6649d5D30134a194BA3E24130305",
+    "referral_storage": "0x6F825c1CBa015Ed94FD0b317c1588d6A8699C0a7",
+    "meta": "0xCfB18Ab5bC28AbfAbC2ccC216e269b16A99325f4",
+    "router": "0x3E8d70286567bf962261a81Da5DBDe6cBbc444C4",
+    "multicall":"0xca11bde05977b3631167028862be2a173976ca11",
     "tokens": {
       "USDC": {
-        "address": "0xFF970A61A04b1cA14834A43f5dE4533eBDDB5CC8",
+        "address": "0x6f9FE619b6BF88028ac57cD665D527A507a6d2Ef",
         "decimals": 6,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "USDC",
-        "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e"
+        "pool_address": "0xcE5467a403eb433391F72007E151DBb8119728E0"
       },
       "BFR": {
         "address": "0x1A5B0aaF478bf1FDA7b934c76E7692D722982a6D",
         "decimals": 18,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "BFR",
-        "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e"
+        "pool_address": "0xcE5467a403eb433391F72007E151DBb8119728E0"
       }
     },
     "pairs": [
@@ -240,8 +243,8 @@
           {
             "token": "USDC",
             "options_contracts": {
-              "config": "0x08d5E019fB16f92822befaC9986E7b7402DAE610",
-              "current": "0x532321e6a2D8A54cf87E34850A7d55466B1ec197"
+              "config": "0x207673F7Cd3390dFB5b1Cd006390489C64c8030d",
+              "current": "0x3EaB8f06473B9A980EbdfA56c75FD8e7898Da907"
             }
           }
         ]
@@ -260,8 +263,8 @@
           {
             "token": "USDC",
             "options_contracts": {
-              "config": "0xbC7DBEB9a7b158711b4B5fb0177F3E0bE024125a",
-              "current": "0x89dD9bA4d290045211A6cE597a98181C7f9D899d"
+              "config": "0x8210b52d733d710D2068870cd55d41E91FC4B086",
+              "current": "0x264FFb92760118eDb078888B84E1E2A8364D201e"
             }
           }
         ]
@@ -280,8 +283,8 @@
           {
             "token": "USDC",
             "options_contracts": {
-              "config": "0x8DaC2Eb302DD9CcB3a9A23263BC021f6f1E8Cd9C",
-              "current": "0xbCD52d37F41dA2277aF92617D70931A787f66Fd5"
+              "config": "0x47F37398fFD4FCa625Ea5C9eDF69FDd3FfB16AbD",
+              "current": "0x4A4B9890aA1203EDA729BfF71De597290B5383f9"
             }
           }
         ]
@@ -300,8 +303,8 @@
           {
             "token": "USDC",
             "options_contracts": {
-              "config": "0xc1925460Fe5669878D5963c29aC51677866dE67F",
-              "current": "0x5d61FE708c9D41acf59009013f14496d559aad09"
+              "config": "0x286b1DFD6B6F61e99EE11a551f134de8C46C7E11",
+              "current": "0xC8A6f8682E3c7953288997F727c3Fc31d277B07A"
             }
           }
         ]
