--- a/public/config.json
+++ b/public/config.json
@@ -10,14 +10,16 @@
         "decimals": 6,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "USDC",
-        "pool_address": "0x1CDA6A34D84F444183E89D2D41D920EeaE883439"
+        "pool_address": "0x1CDA6A34D84F444183E89D2D41D920EeaE883439",
+        "faucet":"0x44B5aF6DFB239A24Aa0Eb0A82c168F961881b7d5"
       },
       "BFR": {
         "address": "0x89fEF05446aEA764C53a2f09bB763876FB57ea8E",
         "decimals": 18,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "BFR",
-        "pool_address": "0xEAf4738C83B48055b54B5E9E48a96A7ee6CbB412"
+        "pool_address": "0xEAf4738C83B48055b54B5E9E48a96A7ee6CbB412",
+        "faucet":"0x8F4db9A46809782b67180F0f8f3d9843a5268137"
       }
     },
     "pairs": [
@@ -101,7 +103,12 @@
           }
         ]
       }
-    ]
+    ],
+    "graph":{
+      "MAIN":"https://api.thegraph.com/subgraphs/name/bufferfinance/buffer-testnet",
+      "LITE":"https://api.thegraph.com/subgraphs/name/bufferfinance/sandbox-lite"
+    }
+
   },
   "42161": {
     "referral_storage": "0xFea57B9548cd72D8705e4BB0fa83AA35966D9c29",
@@ -114,14 +121,17 @@
         "decimals": 6,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "USDC",
-        "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e"
+        "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e",
+        "faucet":"0x44B5aF6DFB239A24Aa0Eb0A82c168F961881b7d5"
+
       },
       "BFR": {
         "address": "0x1A5B0aaF478bf1FDA7b934c76E7692D722982a6D",
         "decimals": 18,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "BFR",
-        "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e"
+        "pool_address": "0x6Ec7B10bF7331794adAaf235cb47a2A292cD9c7e",
+        "faucet":"0x8F4db9A46809782b67180F0f8f3d9843a5268137"
       }
     },
     "pairs": [
@@ -205,7 +215,11 @@
           }
         ]
       }
-    ]
+    ],
+    "graph":{
+      "MAIN":"https://api.thegraph.com/subgraphs/name/bufferfinance/buffer-mainnet",
+      "LITE":"https://api.thegraph.com/subgraphs/name/bufferfinance/mainnet-lite-v2"
+    }
   },
   "80001": {
     "referral_storage": "0x6F825c1CBa015Ed94FD0b317c1588d6A8699C0a7",
@@ -218,14 +232,16 @@
         "decimals": 6,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "USDC",
-        "pool_address": "0xcE5467a403eb433391F72007E151DBb8119728E0"
+        "pool_address": "0xcE5467a403eb433391F72007E151DBb8119728E0",
+        "faucet":"0x4fccf1139FcA44EF716534bae9D3f87a01583338"
       },
       "BFR": {
         "address": "0x1A5B0aaF478bf1FDA7b934c76E7692D722982a6D",
         "decimals": 18,
         "img": "https://cdn.buffer.finance/Buffer-Website-Data/main/Assets/bnb.svg",
         "name": "BFR",
-        "pool_address": "0xcE5467a403eb433391F72007E151DBb8119728E0"
+        "pool_address": "0xcE5467a403eb433391F72007E151DBb8119728E0",
+        "faucet":"0x8F4db9A46809782b67180F0f8f3d9843a5268137"
       }
     },
     "pairs": [
@@ -309,6 +325,10 @@
           }
         ]
       }
-    ]
+    ],
+    "graph":{
+      "MAIN":"https://api.thegraph.com/subgraphs/name/bufferfinance/polygon-test",
+      "LITE":"https://api.thegraph.com/subgraphs/name/bufferfinance/polygon-test-lite"
+    }
   }
 }
