--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-router-dom": "^6.4.3",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
+    "react-use-websocket": "^4.3.1",
     "recharts": "2.1.10",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
