--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@sentry/react": "^6.15.0",
     "@sentry/tracing": "^6.15.0",
     "@synthetixio/synpress": "^1.2.0",
+    "@szhsin/react-menu": "^3.4.1",
     "@thirdweb-dev/react": "^3.6.9",
     "@thirdweb-dev/sdk": "^3.6.9",
     "@types/react": "^17.0.38",
@@ -35,6 +36,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "6.2.4",
+    "add": "^2.0.6",
     "aws-sdk": "^2.1236.0",
     "axios": "^0.26.0",
     "axios-retry": "^3.3.1",
@@ -56,6 +58,7 @@
     "posthog-js": "^1.16.7",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-bottom-drawer": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-gravatar": "^2.6.3",
     "react-html-parser": "^2.0.2",
@@ -74,7 +77,8 @@
     "typescript": "^3.7.5",
     "wagmi": "^0.10.11",
     "web3": "^1.6.1",
-    "websocket": "^1.0.34"
+    "websocket": "^1.0.34",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/big.js": "^6.1.6",
