--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sass": "^1.43.4",
     "styled-components": "^5.3.3",
     "swr": "^1.3.0",
+    "tailwind-merge": "^1.10.0",
     "typescript": "^3.7.5",
     "wagmi": "^0.10.11",
     "web3": "^1.6.1",
