handle min duration for a pair

--- a/public/config.json
+++ b/public/config.json
@@ -22,6 +22,7 @@
     "pairs": [
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Crypto",
         "tv_id": "BTCUSD",
         "pair": "BTC-USD",
@@ -42,6 +43,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Crypto",
         "tv_id": "ETHUSD",
         "pair": "ETH-USD",
@@ -62,6 +64,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "EURUSD",
         "pair": "EUR-USD",
@@ -82,6 +85,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "GBPUSD",
         "pair": "GBP-USD",
@@ -125,6 +129,7 @@
     "pairs": [
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Crypto",
         "tv_id": "BTCUSD",
         "pair": "BTC-USD",
@@ -145,6 +150,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Crypto",
         "tv_id": "ETHUSD",
         "pair": "ETH-USD",
@@ -165,6 +171,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "EURUSD",
         "pair": "EUR-USD",
@@ -185,6 +192,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "GBPUSD",
         "pair": "GBP-USD",
@@ -205,6 +213,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Crypto",
         "tv_id": "SOLUSD",
         "pair": "SOL-USD",
@@ -225,6 +234,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Crypto",
         "tv_id": "ETHBTC",
         "pair": "ETH-BTC",
@@ -245,6 +255,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "01:00",
         "category": "Crypto",
         "tv_id": "LINKUSD",
         "pair": "LINK-USD",
@@ -265,6 +276,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Commodity",
         "tv_id": "XAUUSD",
         "pair": "XAU-USD",
@@ -285,6 +297,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Commodity",
         "tv_id": "XAGUSD",
         "pair": "XAG-USD",
@@ -305,6 +318,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "AUDUSD",
         "pair": "AUD-USD",
@@ -325,6 +339,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "USDJPY",
         "pair": "USD-JPY",
@@ -345,6 +360,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "EURGBP",
         "pair": "EUR-GBP",
@@ -365,6 +381,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "EURJPY",
         "pair": "EUR-JPY",
@@ -385,6 +402,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "GBPJPY",
         "pair": "GBP-JPY",
@@ -405,6 +423,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "NZDUSD",
         "pair": "NZD-USD",
@@ -425,6 +444,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "USDCHF",
         "pair": "USD-CHF",
@@ -445,6 +465,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "GBPCHF",
         "pair": "GBP-CHF",
@@ -465,6 +486,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:05",
         "category": "Forex",
         "tv_id": "USDCAD",
         "pair": "USD-CAD",
