feat: time selector for min 1 minute

--- a/public/config.json
+++ b/public/config.json
@@ -25,6 +25,7 @@
     "pairs": [
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Crypto",
         "tv_id": "BTCUSD",
         "pair": "BTC-USD",
@@ -45,6 +46,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Crypto",
         "tv_id": "ETHUSD",
         "pair": "ETH-USD",
@@ -65,6 +67,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Forex",
         "tv_id": "EURUSD",
         "pair": "EUR-USD",
@@ -85,6 +88,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Forex",
         "tv_id": "GBPUSD",
         "pair": "GBP-USD",
@@ -527,6 +531,7 @@
     "pairs": [
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Crypto",
         "tv_id": "BTCUSD",
         "pair": "BTC-USD",
@@ -547,6 +552,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Crypto",
         "tv_id": "ETHUSD",
         "pair": "ETH-USD",
@@ -567,6 +573,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Forex",
         "tv_id": "EURUSD",
         "pair": "EUR-USD",
@@ -587,6 +594,7 @@
       },
       {
         "max_duration": "04:00",
+        "min_duration": "00:01",
         "category": "Forex",
         "tv_id": "GBPUSD",
         "pair": "GBP-USD",
