--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "axios-retry": "^3.3.1",
     "big.js": "^6.1.1",
     "bn.js": "^5.2.0",
+    "chrome-tabs": "^5.4.0",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "events": "^3.3.0",
+    "flexlayout-react": "0.3.5",
     "graphql": "^16.6.0",
     "hex-to-rgba": "2.0.1",
     "html-to-image": "^1.10.8",
