--- a/public/config.json
+++ b/public/config.json
@@ -23,6 +23,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "BTCUSD",
         "pair": "BTC-USD",
@@ -44,6 +45,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "ETHUSD",
         "pair": "ETH-USD",
@@ -65,6 +67,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 300,
         "category": "Forex",
         "tv_id": "EURUSD",
         "pair": "EUR-USD",
@@ -86,6 +89,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 300,
         "category": "Forex",
         "tv_id": "GBPUSD",
         "pair": "GBP-USD",
@@ -130,6 +134,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "BTCUSD",
         "pair": "BTC-USD",
@@ -151,6 +156,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 200,
         "category": "Crypto",
         "tv_id": "ETHUSD",
         "pair": "ETH-USD",
@@ -172,6 +178,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 300,
         "category": "Forex",
         "tv_id": "EURUSD",
         "pair": "EUR-USD",
@@ -193,6 +200,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 300,
         "category": "Forex",
         "tv_id": "GBPUSD",
         "pair": "GBP-USD",
@@ -214,6 +222,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Crypto",
         "tv_id": "SOLUSD",
         "pair": "SOL-USD",
@@ -235,6 +244,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "01:00",
+        "max_utilization": 150,
         "category": "Crypto",
         "tv_id": "ETHBTC",
         "pair": "ETH-BTC",
@@ -256,6 +266,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "01:00",
+        "max_utilization": 150,
         "category": "Crypto",
         "tv_id": "LINKUSD",
         "pair": "LINK-USD",
@@ -277,6 +288,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Commodity",
         "tv_id": "XAUUSD",
         "pair": "XAU-USD",
@@ -298,6 +310,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Commodity",
         "tv_id": "XAGUSD",
         "pair": "XAG-USD",
@@ -319,6 +332,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "AUDUSD",
         "pair": "AUD-USD",
@@ -340,6 +354,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "USDJPY",
         "pair": "USD-JPY",
@@ -361,6 +376,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "EURGBP",
         "pair": "EUR-GBP",
@@ -382,6 +398,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "EURJPY",
         "pair": "EUR-JPY",
@@ -403,6 +420,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "GBPJPY",
         "pair": "GBP-JPY",
@@ -424,6 +442,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "NZDUSD",
         "pair": "NZD-USD",
@@ -445,6 +464,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "USDCHF",
         "pair": "USD-CHF",
@@ -466,6 +486,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "GBPCHF",
         "pair": "GBP-CHF",
@@ -487,6 +508,7 @@
       {
         "max_duration": "04:00",
         "min_duration": "00:05",
+        "max_utilization": 150,
         "category": "Forex",
         "tv_id": "USDCAD",
         "pair": "USD-CAD",
